<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0D13"
    tools:context="ru.team1802.mypostmail.LoginActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="301dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="235dp"
        android:fontFamily="@font/tt_runs_trial_bold"
        android:gravity="center_horizontal|top"
        android:text="@string/registration"
        android:textAppearance="@style/title_text"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/reg_login_field"
        style="@style/elements_background_dark"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/registration"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:fontFamily="@font/tt_runs_trial_regular"
        android:gravity="center_vertical"
        android:hint="@string/login_field"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/login_field"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/reg_password_field"
        style="@style/elements_background_dark"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/reg_login_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:fontFamily="@font/tt_runs_trial_regular"
        android:gravity="center_vertical"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/password_field"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/repeat_password_field"
        style="@style/elements_background_dark"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/reg_password_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:autofillHints=""
        android:fontFamily="@font/tt_runs_trial_regular"
        android:gravity="center_vertical"
        android:hint="@string/repeat_password_field"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/password_field"
        android:textColorHint="@color/light_gray" />

    <TextView
        android:id="@+id/button_register"
        style="@style/elements_background"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/repeat_password_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/tt_runs_trial_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textAppearance="@style/button_text" />

</RelativeLayout>